# stm-embassy

./: Cargo.toml  build.rs  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs  rtt_logger.rs
